Aligned text fields at the top and fixed overall grade calculation

--- a/TJElementary/src/roots/Grades.css
+++ b/TJElementary/src/roots/Grades.css
@@ -32,35 +32,42 @@
 .student-select-container label, .new-assignment-container h3, .student-roster h3 {
     margin-bottom: 1rem;
     font-weight: normal;
+    text-align: center;
+
 }
 
 .student-select-container select, .new-assignment-container input {
     padding: 0.5rem;
-    border: 1px solid #ddd;
+    border: 0px solid #ddd;
     border-radius: 4px;
     margin-bottom: 0rem;
     width: 100%;
     max-width: 600px;
     background-color: #f9f9f9;
     color: #333;
+    text-align: center;
+
 }
 
 .edit-grade-container {
     text-align: center;
     margin-bottom: 2rem;
+
 }
 
 .edit-grade-container h3 {
     margin-bottom: 1rem;
+    text-align: center;
+
 }
 
 .edit-grade-container input {
     padding: 0.5rem;
-    border: 1px solid #ddd;
+    border: 0px solid #ddd;
     border-radius: 4px;
-    margin-bottom: 1rem;
+    margin-bottom: 0rem;
     width: 100%;
-    max-width: 600px;
+    max-width: 300px;
     background-color: #f9f9f9;
     color: #333;
 }
